examples/errors/class_property_redefinition/main.lc

class Base {

    ty: string
    ty: i32

}

function main() {
    const base = Base{};
}
